# EveWallet

./: .env.example  Dockerfile  README.md  alembic.ini  autodeploy_pi.sh  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_phase2.py  0003_phase3.py
app/: main.py
app/api/: deps.py
app/core/: config.py  database.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  assignment_rule.py  base.py  bucket_assignment.py  character_asset.py  contract.py  contract_item.py  eve_character.py  industry_job.py  industry_job_material.py  industry_job_output.py  inventory_lot.py  inventory_movement.py  market_order.py  project_bucket.py  resolved_location.py  sync_job.py  token.py  user.py  wallet_journal_entry.py  wallet_transaction.py
app/schemas/: auth.py  bucket.py  character.py  order.py  phase3.py  report.py  rule.py  sync_job.py  wallet.py  wallet_journal.py
app/services/: asset_service.py  assignment_rule_service.py  auth_service.py  bucket_service.py  character_service.py  contract_service.py  cost_basis_service.py  esi_client.py  industry_service.py  inventory_service.py  order_service.py  report_service.py  report_service_phase3.py  structure_service.py  sync_scheduler_service.py  wallet_journal_service.py  wallet_service.py
app/tests/: test_assignment_rule_service.py  test_health.py  test_phase2_routes.py  test_phase3_routes.py  test_phase3_services.py  test_report_service.py  test_wallet_journal_service.py
frontend/: package.json  tsconfig.json
frontend/src/: index.css  main.tsx
(+20 files in other folders)
