[project]
name = "evewallet"
version = "0.1.0"
description = "EVE project profit tracker backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "cryptography>=43.0",
  "redis>=5.0",
  "rq>=1.16",
  "apscheduler>=3.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "anyio>=4.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
